# miniature-octo-waddle

./: README.md  environment.yaml
ml-p3/: README.md  pyproject.toml  theory.md
ml-p3/ml_p3/: LSTM.py  NN_classification.py  __init__.py  __main__.py  feature_extraction.py  kerasLSTM.py  optimizer.py  plotting.py
ml-p3/ml_p3/models/: custom_lstm.pkl  he_relu_8_reg.pkl  keras_lstm.keras
ml-p3/ml_p3/utils/: __init__.py  grid_search.py  utils.py
ml-p3/notebooks/: LSTM.ipynb  NN_classifier.ipynb
ml-p3/tests/data/: resampled_eth_data.csv
ml-p3/tests/data/classification/: classifications1.npy  classifications2.npy  classifications3.npy  classifications4.npy  classifications5.npy
